--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jtvserver",
-  "version": "1.0.0",
+  "version": "2.4.1",
   "description": "jiotv server to live tv in the web or in any device",
   "main": "index.js",
   "scripts": {
@@ -10,13 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.2",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "m3u8-parser": "^6.0.0",
-    "request": "^2.88.2"
+    "node-fetch": "^2.6.1"
   }
 }
