--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "jtvserver",
-  "version": "2.4.1",
+  "version": "2.6.4",
   "description": "jiotv server to live tv in the web or in any device",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "sh start.sh"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "m3u8-parser": "^6.0.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "node-json-db": "^2.1.4"
   }
 }
